src/sidebar-styles.css
::-webkit-scrollbar-thumb {
    
}


#side-bar { 
    height: 100vh -60px;
    grid-column: 1 / 2;
    overflow: hidden;
    background-color:rgb(179, 194, 197);
    overflow-y: auto;
}

#side-bar-nav {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 16px;
    padding: 16px 0px;
}

.nav-button {
    display: flex;
    align-items: center;
    width: 85%;
    padding: 2px;
    gap: 4px;
    border: solid 2px transparent;
    border-radius: 4px;
    background-color: rgb(245, 245, 245);
}

.nav-button:hover {
    border-color: rgb(50, 99, 122);
}

.nav-button.selected:hover {
    background-color: rgb(50, 99, 122);
}

.nav-button.selected {
    background-color: rgb(80, 126, 148);
}

.nav-img {
    width: 25px;
    filter: brightness(2);
}

.nav-text {
    font-size: 16px;
    color: rgb(82, 82, 82);
}



.nav-text.selected {
    color: rgb(233, 233, 233);
}

.nav-img.selected {
    filter: invert();
    filter: brightness(7);
}



.opened {
    width: 250px;
    transition: width 0.2s;

}

.collapsed {
    width: 0;

}



#side-bar-projects {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 16px;

}

#side-bar-projects > p{
    font-size: 20px;
    padding: 0px 0px 3px 4px;
    border-bottom: 2px solid rgb(82, 82, 82);
    margin: 0px 12px;
    color: rgb(82, 82, 82);;
}

#projects-container {
    width: 100%;
    height: 400px;
    display: flex;
    flex-direction: column;
    gap: 16px;

    align-items: center;
}

.project-card {
    display: flex;
    align-items: center;
    width: 85%;
    padding: 2px;
    gap: 4px;
    border: solid 2px transparent;
    border-radius: 4px;
    background-color: rgb(245, 245, 245);
    justify-content: space-between;
    border: solid 2px transparent;
    border-radius: 4px;
}

.project-card:hover {
    border-color: rgb(50, 99, 122);
}

.project-card.selected {
    background-color: rgb(80, 126, 148);
}

.project-card.selected:hover {
    background-color: rgb(50, 99, 122);
}

.project-title {
    padding-left: 4px;
    overflow: hidden;
    font-size: 16px;
    color: rgb(82, 82, 82);
    text-align: center;
}

.project-card.selected > .project-title {
    color: rgb(233, 233, 233);
}

.project-buttons {
    position: relative;
    bottom: 2px;
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 4px;
    margin-right: 6px;
    height: 30px;
}

.project-buttons * {
    width: 22px;
    height: 22px;
    background: none;
    border: none;
    filter: brightness(2);
}

.project-card.selected > .project-buttons * {
    filter: invert();
    filter: brightness(7);
}

.modify-btn {
    background-image: url(./imgs/note-edit-outline.svg);
}

.delete-btn {
background-image: url(./imgs/trash-can-outline.svg);
}

.new-project-btn {
    justify-content: center;
    text-align: center;
    height: 30px;
    font-size: 16px;
    color: rgb(82, 82, 82);
    text-align: center;

}

